chore: add jquery and arrive.js

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,5 +1,12 @@
 <div class="container-fluid">
   <status-bar></status-bar>
 
+  <div class="slideout-menu">
+    <ul>
+      <li>Employees</li>
+      <li>Issues</li>
+      <li>Analytics</li>
+    </ul>
+  </div>
 
 </div>
