--- a/src/app/components/statusbar/statusbar.html
+++ b/src/app/components/statusbar/statusbar.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-static-top navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand">
+        <a class="btn">
           <span class="glyphicon glyphicon-menu-hamburger"></span>
         </a>
       </div>
