--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -3,6 +3,7 @@
  *  The list of variables are listed here bower_components/bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss
  */
 $navbar-inverse-link-color: #5AADBB;
+$fa-font-path: "../../bower_components/font-awesome/fonts";
 $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 
 /**
@@ -19,11 +20,44 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
   padding: 0.2em 0;
 }
 
-.thumbnail {
-  height: 200px;
+//Slideout component
 
-  img.pull-right {
-    width: 50px;
+.slideout-container {
+  background-color: $gray-base;
+
+  position: fixed;
+  z-index: 1000;
+
+  top: 0;
+  left: 0;
+
+  width: 300px;
+  height: 100%;
+
+  transform: translateX(-100%);
+  transition: transform 0.25s ease;
+
+  &_active {
+    transform: translateX(0);
+  }
+}
+
+.slideout-item {
+  color: $gray-light;
+  font-size: 20px;
+
+  padding: 8px 16px;
+
+  &__icon {
+    padding-right: 16px;
+  }
+
+  &__title {}
+
+  &:hover {
+    color: $gray-lighter;
+
+    cursor: pointer;
   }
 }
 
