--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,11 +1,20 @@
 <div class="container-fluid">
   <status-bar></status-bar>
 
-  <div class="slideout-menu">
-    <ul>
-      <li>Employees</li>
-      <li>Issues</li>
-      <li>Analytics</li>
+  <div class="slideout-container">
+    <ul class="slideout-menu list-unstyled">
+      <li class="slideout-menu__item slideout-item withripple">
+        <i class="slideout-item__icon fa fa-users" aria-hidden="true"></i>
+        <span class="slideout-item__title">Employees</span>
+      </li>
+      <li class="slideout-menu__item slideout-item withripple">
+        <i class="slideout-item__icon fa fa-tasks" aria-hidden="true"></i>
+        <span class="slideout-item__title">Issues</span>
+      </li>
+      <li class="slideout-menu__item slideout-item withripple">
+        <i class="slideout-item__icon fa fa-bar-chart" aria-hidden="true"></i>
+        <span class="slideout-item__title">Analytics</span>
+      </li>
     </ul>
   </div>
 
