feat: add slideout items to controller

--- a/src/app/components/slideoutMenu/slideout.html
+++ b/src/app/components/slideoutMenu/slideout.html
@@ -1,5 +1,8 @@
-<div class="slideout-container">
+<div class="slideout-container slideout-container_active">
   <ul class="slideout-menu list-unstyled">
+    <li ng-repeat="item in vm.menuItems">
+      {{item.name}}
+    </li>
     <li class="slideout-menu__item slideout-item withripple">
       <i class="slideout-item__icon fa fa-users" aria-hidden="true"></i>
       <span class="slideout-item__title">Employees</span>
