feat: add slideout menu

--- a/src/app/components/slideoutMenu/slideout.html
+++ b/src/app/components/slideoutMenu/slideout.html
@@ -1,19 +1,10 @@
 <div class="slideout-container slideout-container_active">
   <ul class="slideout-menu list-unstyled">
-    <li ng-repeat="item in vm.menuItems">
-      {{item.name}}
+
+    <li ng-repeat="item in vm.menuItems" class="slideout-menu__item slideout-item withripple">
+      <i class="slideout-item__icon fa {{item.icon}}" aria-hidden="true"></i>
+      <span class="slideout-item__title">{{item.title}}</span>
     </li>
-    <li class="slideout-menu__item slideout-item withripple">
-      <i class="slideout-item__icon fa fa-users" aria-hidden="true"></i>
-      <span class="slideout-item__title">Employees</span>
-    </li>
-    <li class="slideout-menu__item slideout-item withripple">
-      <i class="slideout-item__icon fa fa-tasks" aria-hidden="true"></i>
-      <span class="slideout-item__title">Issues</span>
-    </li>
-    <li class="slideout-menu__item slideout-item withripple">
-      <i class="slideout-item__icon fa fa-bar-chart" aria-hidden="true"></i>
-      <span class="slideout-item__title">Analytics</span>
-    </li>
+
   </ul>
 </div>
