--- a/src/app/components/statusbar/statusbar.html
+++ b/src/app/components/statusbar/statusbar.html
@@ -1,12 +1,14 @@
-<div class="row">
-  <nav class="navbar navbar-static-top navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="btn">
-          <span class="glyphicon glyphicon-menu-hamburger"></span>
-        </a>
-      </div>
+<div class="container-fluid">
+  <div class="row">
+    <nav class="navbar navbar-static-top navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="btn" ng-click="sb.toggleSlideOutMenu()">
+            <span class="glyphicon glyphicon-menu-hamburger"></span>
+          </a>
+        </div>
 
-    </div>
-  </nav>
+      </div>
+    </nav>
+  </div>
 </div>
