--- a/src/app/employees/employees.html
+++ b/src/app/employees/employees.html
@@ -1,17 +1,30 @@
 <script type="text/ng-template" id="myModalContent.html">
   <div class="modal-header">
-    <h3 class="modal-title">I'm a modal!</h3>
+    <h3 class="modal-title">Add new employee</h3>
   </div>
   <div class="modal-body">
-    <ul>
-      <li ng-repeat="item in emc.items">
-        <a href="#" ng-click="$event.preventDefault(); emc.selected.item = item">{{ item }}</a>
-      </li>
-    </ul>
-    Selected: <b>{{ emc.selected.item }}</b>
+    <form id="employee-form" ng-submit="emc.addNewEmployee(employee)">
+
+      <div class="form-group">
+        <label for="first-name" class="control-label">First Name:</label>
+        <input type="text" id="first-name" class="form-control" ng-model="employee.firstName">
+      </div>
+
+      <div class="form-group">
+        <label for="last-name" class="control-label">Last Name:</label>
+        <input type="text" id="last-name" class="form-control" ng-model="employee.lastName">
+      </div>
+
+      <div class="form-group">
+        <label for="position" class="control-label">Position:</label>
+        <input type="text" id="position" class="form-control" ng-model="employee.position">
+      </div>
+
+
+    </form>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="emc.ok()">OK</button>
+    <button class="btn btn-primary" type="submit" form="employee-form">Add employee</button>
     <button class="btn btn-warning" type="button" ng-click="emc.cancel()">Cancel</button>
   </div>
 </script>
