--- a/src/app/components/statusbar/statusbar.html
+++ b/src/app/components/statusbar/statusbar.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <nav class="navbar navbar-static-top navbar-inverse">
+    <nav class="navbar navbar-static-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="btn" ng-click="sb.toggleSlideOutMenu()">
