--- a/src/app/employees/employees.html
+++ b/src/app/employees/employees.html
@@ -7,22 +7,22 @@
 
       <div class="form-group">
         <label for="first-name" class="control-label">First Name:</label>
-        <input type="text" id="first-name" class="form-control" ng-model="employee.firstName">
+        <input type="text" id="first-name" class="form-control" placeholder="Jane" ng-model="employee.firstName">
       </div>
 
       <div class="form-group">
         <label for="last-name" class="control-label">Last Name:</label>
-        <input type="text" id="last-name" class="form-control" ng-model="employee.lastName">
+        <input type="text" id="last-name" class="form-control" placeholder="Doe" ng-model="employee.lastName">
       </div>
 
       <div class="form-group">
         <label for="position" class="control-label">Position:</label>
-        <input type="text" id="position" class="form-control" ng-model="employee.position">
+        <input type="text" id="position" class="form-control" placeholder="accountant" ng-model="employee.position">
       </div>
 
       <div class="form-group">
         <label for="city" class="control-label">City:</label>
-        <input type="text" id="city" class="form-control" ng-model="employee.city">
+        <input type="text" id="city" class="form-control" placeholder="Mountain View" ng-model="employee.city">
       </div>
 
 
@@ -30,7 +30,7 @@
   </div>
   <div class="modal-footer">
     <button class="btn btn-primary" type="submit" form="employee-form">Add employee</button>
-    <button class="btn btn-warning" type="button" ng-click="emc.cancel()">Cancel</button>
+    <button class="btn btn-danger" type="button" ng-click="emc.cancel()">Cancel</button>
   </div>
 </script>
 
