--- a/src/app/components/slideoutMenu/slideout.html
+++ b/src/app/components/slideoutMenu/slideout.html
@@ -1,14 +1,12 @@
 <div class="slideout-container" ng-class="{'slideout-container_active': so.slideOutVisible}">
 
-  <ul class="slideout-menu list-unstyled">
+  <div class="slideout-menu">
 
-    <li ng-repeat="item in so.menuItems" class="slideout-menu__item slideout-item withripple">
-      <a ng-href="{{item.route}}">
-        <i class="slideout-item__icon fa {{item.icon}}" aria-hidden="true"></i>
-        <span class="slideout-item__title">{{item.title}}</span>
-      </a>
-    </li>
+    <a ng-repeat="item in so.menuItems" ng-href="{{item.route}}" class="slideout-menu__item slideout-item withripple">
+      <i class="slideout-item__icon fa {{item.icon}}" aria-hidden="true"></i>
+      <span class="slideout-item__title">{{item.title}}</span>
+    </a>
 
-  </ul>
+  </div>
 
 </div>
