--- a/src/app/components/statusbar/statusbar.html
+++ b/src/app/components/statusbar/statusbar.html
@@ -8,6 +8,24 @@
           </a>
         </div>
 
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li>
+              <button type="button" class="btn btn-default navbar-btn" tooltip-placement="bottom"
+                      uib-tooltip="Add new employee">
+                <i class="fa fa-user-plus" aria-hidden="true"></i>
+              </button>
+            </li>
+            <li>
+              <button type="button" class="btn btn-default navbar-btn" tooltip-placement="bottom"
+                      uib-tooltip="Add new issue">
+                <i class="fa fa-file-o" aria-hidden="true"></i>
+              </button>
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+
       </div>
     </nav>
   </div>
