--- a/src/app/components/statusbar/statusbar.html
+++ b/src/app/components/statusbar/statusbar.html
@@ -8,7 +8,6 @@
           </a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li>
@@ -24,7 +23,7 @@
               </button>
             </li>
           </ul>
-        </div><!-- /.navbar-collapse -->
+        </div>
 
       </div>
     </nav>
