--- a/src/app/components/statusbar/statusbar.html
+++ b/src/app/components/statusbar/statusbar.html
@@ -12,7 +12,7 @@
           <ul class="nav navbar-nav">
             <li>
               <button type="button" class="btn btn-default navbar-btn" tooltip-placement="bottom"
-                      uib-tooltip="Add new employee">
+                      uib-tooltip="Add new employee" ng-click="sb.openAddEmployeeModal()">
                 <i class="fa fa-user-plus" aria-hidden="true"></i>
               </button>
             </li>
