feat #2: add actions to statusbar

--- a/src/app/components/statusbar/statusbar.html
+++ b/src/app/components/statusbar/statusbar.html
@@ -18,7 +18,7 @@
             </li>
             <li>
               <button type="button" class="btn btn-default navbar-btn" tooltip-placement="bottom"
-                      uib-tooltip="Add new issue">
+                      uib-tooltip="Add new issue" ng-click="sb.openAddIssueModal()">
                 <i class="fa fa-file-o" aria-hidden="true"></i>
               </button>
             </li>
