feat: add toaster on employee save

--- a/src/app/employees/employees.html
+++ b/src/app/employees/employees.html
@@ -1,9 +1,9 @@
-
+<toaster-container toaster-options="{'time-out': 2500}"></toaster-container>
 
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12">
-      <button class="btn btn-primary" ng-click="employees.openAddEmployeeModal()">Add new employee</button>
+      <button class="btn btn-success btn-raised" ng-click="employees.openAddEmployeeModal()">Add new employee</button>
     </div>
   </div>
 
