feat: add toaster on issue save. fix #6

--- a/src/app/issues/issues.html
+++ b/src/app/issues/issues.html
@@ -1,4 +1,4 @@
-
+<toaster-container toaster-options="{'time-out': 2500}"></toaster-container>
 
 <div class="container-fluid">
   <div class="row">
