--- a/src/app/issues/issuesModal.html
+++ b/src/app/issues/issuesModal.html
@@ -2,7 +2,7 @@
   <h3 class="modal-title">Add new issue</h3>
 </div>
 <div class="modal-body">
-  <form id="issue-form" ng-submit="im.addNewIssue(issue)">
+  <form id="issueform" name="issueform" ng-submit="im.addNewIssue(issue)">
 
     <div class="form-group">
       <label for="title" class="control-label">Title:</label>
@@ -17,6 +17,6 @@
   </form>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-primary" type="submit" form="issue-form">Add issue</button>
+  <button class="btn btn-primary" type="submit" form="issueform">Add issue</button>
   <button class="btn btn-danger" type="button" ng-click="im.cancel()">Cancel</button>
 </div>
