--- a/src/app/issues/issues.html
+++ b/src/app/issues/issues.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12">
-      <button class="btn btn-primary" ng-click="issues.openAddIssueModal()">Add new issue</button>
+      <button class="btn btn-success btn-raised" ng-click="issues.openAddIssueModal()">Add new issue</button>
     </div>
   </div>
 
