--- a/src/app/issues/issues.html
+++ b/src/app/issues/issues.html
@@ -11,21 +11,36 @@
     <div class="col-xs-12">
       <div class="form-group">
         <label for="filterissues" class="control-label">Search for issue:</label>
-        <input type="text" id="filterissues" class="form-control" ng-model="issues.filter" placeholder="Search titles, statuses and repoters">
+        <input type="text" id="filterissues" class="form-control" ng-model="issues.filter"
+               placeholder="Search titles, statuses and repoters">
       </div>
-      <table class="table table-condensed">
+      <table class="table table-condensed table-hover">
         <thead>
         <tr>
           <th>Title <i class="fa fa-sort-asc" aria-hidden="true"></i></th>
-          <th>Status</th>
           <th>Reporter <i class="fa fa-sort-desc" aria-hidden="true"></i></th>
+          <th>Status</th>
         </tr>
         </thead>
         <tbody>
         <tr ng-repeat="issue in issues.issues | filter: issues.filter">
           <td>{{issue.title}}</td>
-          <td>{{issue.status}}</td>
           <td>{{issue.reporter}}</td>
+          <td>
+            <div class="btn-group" uib-dropdown>
+              <button id="single-button" type="button" class="btn btn-raised"
+                      ng-class="{'btn-primary': issue.status === 'open',
+                      'btn-warning': issue.status === 'in progress',
+                       'btn-success': issue.status === 'resolved'}"
+                      uib-dropdown-toggle>
+                {{issue.status}} <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                <li role="menuitem"><a ng-click="issues.updateIssueStatus(issue, 'open')">Open</a></li>
+                <li role="menuitem"><a ng-click="issues.updateIssueStatus(issue, 'in progress')"> In progress</a></li>
+                <li role="menuitem"><a ng-click="issues.updateIssueStatus(issue, 'resolved')">Resolved</a></li>
+              </ul>
+            </div>
         </tr>
         </tbody>
       </table>
