--- a/src/app/issues/issues.html
+++ b/src/app/issues/issues.html
@@ -9,21 +9,39 @@
 
   <div class="row">
     <div class="col-xs-12">
+
       <div class="form-group">
         <label for="filterissues" class="control-label">Search for issue:</label>
-        <input type="text" id="filterissues" class="form-control" ng-model="issues.filter"
+        <input type="text" id="filterissues" class="form-control" ng-model="issues.search"
                placeholder="Search titles, statuses and repoters">
       </div>
+
+      <div class="btn-group">
+        <label class="btn btn-default" ng-model="issues.filter" uib-btn-radio="" uncheckable>All</label>
+        <label class="btn btn-default" ng-model="issues.filter" uib-btn-radio="'open'" uncheckable>Opened</label>
+        <label class="btn btn-default" ng-model="issues.filter" uib-btn-radio="'in progress'" uncheckable>In
+          progress</label>
+        <label class="btn btn-default" ng-model="issues.filter" uib-btn-radio="'resolved'" uncheckable>Resolved</label>
+      </div>
+
       <table class="table table-condensed table-hover">
         <thead>
         <tr>
-          <th>Title <i class="fa fa-sort-asc" aria-hidden="true"></i></th>
-          <th>Reporter <i class="fa fa-sort-desc" aria-hidden="true"></i></th>
+          <th ng-click="issues.sort = issues.sort === 'title' ? '-title' : 'title'">
+            Title
+            <i class="fa fa-sort-asc" aria-hidden="true" ng-if="issues.sort === '-title'"></i>
+            <i class="fa fa-sort-desc" aria-hidden="true" ng-if="issues.sort === 'title'"></i>
+          </th>
+          <th ng-click="issues.sort = issues.sort === 'reporter' ? '-reporter' : 'reporter'">
+            Reporter
+            <i class="fa fa-sort-asc" aria-hidden="true" ng-if="issues.sort === '-reporter'"></i>
+            <i class="fa fa-sort-desc" aria-hidden="true" ng-if="issues.sort === 'reporter'"></i>
+          </th>
           <th>Status</th>
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="issue in issues.issues | filter: issues.filter">
+        <tr ng-repeat="issue in issues.issues | filter: issues.search | filter: issues.filter | orderBy: issues.sort">
           <td>{{issue.title}}</td>
           <td>{{issue.reporter}}</td>
           <td>
