feat: hardcode basic line chart

--- a/src/app/analytics/analytics.html
+++ b/src/app/analytics/analytics.html
@@ -1,1 +1,9 @@
-<p class="text-center">Analytics</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-6">
+      <canvas id="line" class="chart chart-line" chart-data="an.data" chart-labels="an.labels"
+              chart-legend="true" chart-series="an.series"></canvas>
+    </div>
+    <div class="col-md-6"></div>
+  </div>
+</div>
