feat: add required fields for issues

--- a/src/app/employees/employeesModal.html
+++ b/src/app/employees/employeesModal.html
@@ -6,7 +6,8 @@
 
     <div class="form-group">
       <label for="first-name" class="control-label">First Name:</label>
-      <input type="text" id="first-name" class="form-control" placeholder="Jane" ng-model="employee.firstName">
+      <input type="text" id="first-name" class="form-control" placeholder="Jane" ng-model="employee.firstName"
+             autofocus>
     </div>
 
     <div class="form-group">
