--- a/src/app/analytics/analytics.html
+++ b/src/app/analytics/analytics.html
@@ -4,6 +4,10 @@
       <canvas id="line" class="chart chart-line" chart-data="an.data" chart-labels="an.labels"
               chart-legend="true" chart-series="an.series"></canvas>
     </div>
-    <div class="col-md-6"></div>
+    <div class="col-md-6">
+      <canvas id="bar" class="chart chart-bar"
+              chart-data="an.barData" chart-labels="an.barLabels" chart-series="an.barSeries"
+      </canvas>
+    </div>
   </div>
 </div>
