add save lat lon for employee

--- a/src/app/employees/employeesModal.html
+++ b/src/app/employees/employeesModal.html
@@ -23,7 +23,7 @@
 
     <div class="form-group">
       <label for="city" class="control-label">City:</label>
-      <input g-places-autocomplete type="text" id="city" class="form-control" placeholder="Mountain View" ng-model="employee.city">
+      <input g-places-autocomplete type="text" id="city" class="form-control" placeholder="Mountain View" ng-model="employee.place">
     </div>
   </form>
 </div>
