--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -63,6 +63,8 @@ a[ng-click] {
   z-index: 1051;
 }
 
+.angular-google-map-container { height: 400px; }
+
 /**
  *  Do not remove the comments below. It' s the markers used by gulp-inject to inject
  *  all your sass files automatically
