--- a/src/app/components/statusbar/statusbar.html
+++ b/src/app/components/statusbar/statusbar.html
@@ -3,6 +3,7 @@
     <nav class="navbar navbar-static-top">
       <div class="container-fluid">
         <div class="navbar-header">
+          <span class="navbar-brand">{{sb.title}}</span>
           <a class="btn" ng-click="sb.toggleSlideOutMenu()">
             <span class="glyphicon glyphicon-menu-hamburger"></span>
           </a>
@@ -24,7 +25,6 @@
             </li>
           </ul>
         </div>
-
       </div>
     </nav>
   </div>
