Squashed commit of the following:
commit d5798f106de36b37f5c521377d338a3e11c22371
Author: SergeyKhval <sergeykhval@gmail.com>
Date:   Tue Jun 21 17:47:50 2016 +0300

    feat: implement bar chart for issues

commit 1e9033c5c59cd1c6549ea88bdeaf2c2e504eff60
Author: SergeyKhval <sergeykhval@gmail.com>
Date:   Tue Jun 21 17:02:56 2016 +0300

    chore: update all project devDependencies to stable versions

commit 8bdd5ae84300954c64322345671ade9683f3a2bf
Author: SergeyKhval <sergeykhval@gmail.com>
Date:   Mon Jun 20 12:39:59 2016 +0300

    feat: update analytics controller with some issues data

commit de4fbae33f262bf3e09bbfa673f065236fba531c
Author: SergeyKhval <sergeykhval@gmail.com>
Date:   Mon Jun 20 12:39:23 2016 +0300

    chore: update gulp-eslint to 1.1.1

commit b8cbcabdee824f3446577d25b2c31c07ebe71db8
Author: SergeyKhval <sergeykhval@gmail.com>
Date:   Mon Jun 20 12:17:44 2016 +0300

    feat: add basic issues ordering

commit acaf5da0e894b0c2aaf94bb4d1d44a043826652a
Author: SergeyKhval <sergeykhval@gmail.com>
Date:   Mon Jun 20 12:17:05 2016 +0300

    chore: update eslint-loader to version 1.3.0

commit 208a24c64844d34111187900dfd24524c2394be3
Author: SergeyKhval <sergeykhval@gmail.com>
Date:   Mon Jun 20 11:59:59 2016 +0300

    feat: add months constant

commit 636d25ca8a2b03c150973177c8eaf0033573ec55
Author: SergeyKhval <sergeykhval@gmail.com>
Date:   Mon Jun 20 11:59:36 2016 +0300

    fix: temporarily disable eslint as it fails on errors

--- a/src/app/analytics/analytics.html
+++ b/src/app/analytics/analytics.html
@@ -5,8 +5,7 @@
               chart-legend="true" chart-series="an.series"></canvas>
     </div>
     <div class="col-md-6">
-      <canvas id="bar" class="chart chart-bar" chart-data="an.barData" chart-labels="an.barLabels"
-              chart-series="an.barSeries">
+      <canvas id="bar" class="chart chart-bar" chart-data="an.barData" chart-labels="an.barLabels">
       </canvas>
     </div>
   </div>
