fix #7: add basic form validations

--- a/src/app/analytics/analytics.html
+++ b/src/app/analytics/analytics.html
@@ -7,7 +7,7 @@
     <div class="col-md-6">
 
 
-      <h3>Total opened issues in 2016 by month</h3>
+      <h3>Issues created in 2016 by month</h3>
       <canvas id="bar" class="chart chart-bar" chart-data="an.issuesByMonth" chart-labels="an.barLabels">
       </canvas>
 
