--- a/src/app/issues/issues.html
+++ b/src/app/issues/issues.html
@@ -24,51 +24,53 @@
         <label class="btn btn-default" ng-model="issues.filter" uib-btn-radio="'resolved'" uncheckable>Resolved</label>
       </div>
 
-      <table class="table table-condensed table-hover">
-        <thead>
-        <tr>
-          <th ng-click="issues.sort = issues.sort === 'title' ? '-title' : 'title'">
-            Title
-            <i class="fa fa-sort-asc" aria-hidden="true" ng-if="issues.sort === '-title'"></i>
-            <i class="fa fa-sort-desc" aria-hidden="true" ng-if="issues.sort === 'title'"></i>
-          </th>
-          <th ng-click="issues.sort = issues.sort === 'reporter' ? '-reporter' : 'reporter'">
-            Reporter
-            <i class="fa fa-sort-asc" aria-hidden="true" ng-if="issues.sort === '-reporter'"></i>
-            <i class="fa fa-sort-desc" aria-hidden="true" ng-if="issues.sort === 'reporter'"></i>
-          </th>
-          <th ng-click="issues.sort = issues.sort === 'createdAt' ? '-createdAt' : 'createdAt'">
-            Created
-            <i class="fa fa-sort-asc" aria-hidden="true" ng-if="issues.sort === '-createdAt'"></i>
-            <i class="fa fa-sort-desc" aria-hidden="true" ng-if="issues.sort === 'createdAt'"></i>
-          </th>
-          <th>Status</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="issue in issues.issues | filter: issues.search | filter: issues.filter | orderBy: issues.sort"
-            ng-click="issues.openDetailIssueModal(issue)">
-          <td>{{issue.title}}</td>
-          <td>{{issue.reporter}}</td>
-          <td>{{issue.createdAt | date: 'longDate'}}</td>
-          <td>
-            <div class="btn-group" uib-dropdown ng-click="$event.stopPropagation()">
-              <button id="single-button" type="button" class="btn btn-raised"
-                      ng-class="{'btn-primary': issue.status === 'open',
-                      'btn-warning': issue.status === 'in progress',
-                       'btn-success': issue.status === 'resolved'}"
-                      uib-dropdown-toggle>
-                {{issue.status}} <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-                <li role="menuitem"><a ng-click="issues.updateIssueStatus(issue, 'open')">Open</a></li>
-                <li role="menuitem"><a ng-click="issues.updateIssueStatus(issue, 'in progress')"> In progress</a></li>
-                <li role="menuitem"><a ng-click="issues.updateIssueStatus(issue, 'resolved')">Resolved</a></li>
-              </ul>
-            </div>
-        </tr>
-        </tbody>
-      </table>
+      <div class="table-responsive">
+        <table class="table table-condensed table-hover">
+          <thead>
+          <tr>
+            <th ng-click="issues.sort = issues.sort === 'title' ? '-title' : 'title'">
+              Title
+              <i class="fa fa-sort-asc" aria-hidden="true" ng-if="issues.sort === '-title'"></i>
+              <i class="fa fa-sort-desc" aria-hidden="true" ng-if="issues.sort === 'title'"></i>
+            </th>
+            <th ng-click="issues.sort = issues.sort === 'reporter' ? '-reporter' : 'reporter'">
+              Reporter
+              <i class="fa fa-sort-asc" aria-hidden="true" ng-if="issues.sort === '-reporter'"></i>
+              <i class="fa fa-sort-desc" aria-hidden="true" ng-if="issues.sort === 'reporter'"></i>
+            </th>
+            <th ng-click="issues.sort = issues.sort === 'createdAt' ? '-createdAt' : 'createdAt'">
+              Created
+              <i class="fa fa-sort-asc" aria-hidden="true" ng-if="issues.sort === '-createdAt'"></i>
+              <i class="fa fa-sort-desc" aria-hidden="true" ng-if="issues.sort === 'createdAt'"></i>
+            </th>
+            <th>Status</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr ng-repeat="issue in issues.issues | filter: issues.search | filter: issues.filter | orderBy: issues.sort"
+              ng-click="issues.openDetailIssueModal(issue)">
+            <td>{{issue.title}}</td>
+            <td>{{issue.reporter}}</td>
+            <td>{{issue.createdAt | date: 'longDate'}}</td>
+            <td>
+              <div class="btn-group" uib-dropdown ng-click="$event.stopPropagation()">
+                <button id="single-button" type="button" class="btn btn-raised"
+                        ng-class="{'btn-primary': issue.status === 'open',
+                            'btn-warning': issue.status === 'in progress',
+                             'btn-success': issue.status === 'resolved'}"
+                        uib-dropdown-toggle>
+                  {{issue.status}} <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                  <li role="menuitem"><a ng-click="issues.updateIssueStatus(issue, 'open')">Open</a></li>
+                  <li role="menuitem"><a ng-click="issues.updateIssueStatus(issue, 'in progress')"> In progress</a></li>
+                  <li role="menuitem"><a ng-click="issues.updateIssueStatus(issue, 'resolved')">Resolved</a></li>
+                </ul>
+              </div>
+          </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
