--- a/src/app/analytics/analytics.html
+++ b/src/app/analytics/analytics.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-6">
-      <canvas id="line" class="chart chart-line" chart-data="an.data" chart-labels="an.labels"
-              chart-legend="true" chart-series="an.series"></canvas>
+      <h3>Number of paying customers in 2016</h3>
+      <canvas id="line" class="chart chart-line" chart-data="an.data" chart-labels="an.barLabels"></canvas>
     </div>
     <div class="col-md-6">
 
