--- a/src/app/issues/issues.html
+++ b/src/app/issues/issues.html
@@ -4,6 +4,7 @@
   <div class="row">
     <div class="col-xs-12">
       <button class="btn btn-success btn-raised" ng-click="issues.openAddIssueModal()">Add new issue</button>
+      <button class="btn btn-info btn-raised" ng-csv="issues.downloadCsv()" filename="issues.csv">Download csv</button>
     </div>
   </div>
 
