fix #16: add missing columns from issues table

--- a/src/app/issues/issueDetailsModal.html
+++ b/src/app/issues/issueDetailsModal.html
@@ -14,7 +14,7 @@
     <label class="control-label">Description:</label>
     <p>{{im.selectedIssue.description}}</p>
 
-    <label class="control-label">Reporter:</label>
+    <label class="control-label">Employee:</label>
     <p>{{im.selectedIssue.reporter}}</p>
 
     <div class="row">
