--- a/src/app/components/statusbar/statusbar.html
+++ b/src/app/components/statusbar/statusbar.html
@@ -23,6 +23,12 @@
                 <i class="fa fa-file-o" aria-hidden="true"></i>
               </button>
             </li>
+            <li>
+              <button type="button" class="btn btn-default navbar-btn" tooltip-placement="bottom"
+                      uib-tooltip="Add new post" ng-click="sb.openAddPostModal()">
+                <i class="fa fa-file-text-o" aria-hidden="true"></i>
+              </button>
+            </li>
           </ul>
         </div>
       </div>
