--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,6 +1,21 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-6"></div>
+    <div class="col-md-6">
+      <div class="panel">
+        <div class="panel-heading">
+          <h2 class="panel-title">Recent news:</h2>
+        </div>
+        <div class="panel-body">
+          <ul class="list-unstyled">
+            <li ng-repeat="post in home.posts">
+              <h3>{{post.title}}</h3>
+              <p>{{post.body}}</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
     <div class="col-md-6">
       <div class="panel panel-success">
         <div class="panel-heading">
