--- a/src/app/issues/issues.html
+++ b/src/app/issues/issues.html
@@ -4,7 +4,12 @@
   <div class="row">
     <div class="col-xs-12">
       <button class="btn btn-success btn-raised" ng-click="issues.openAddIssueModal()">Add new issue</button>
-      <button class="btn btn-info btn-raised" ng-csv="issues.downloadCsv()" filename="issues.csv">Download csv</button>
+      <button class="btn btn-info btn-raised" ng-csv="issues.downloadCsv()" filename="issues.csv">Download as csv
+      </button>
+      <label class="btn btn-default btn-raised">
+        Export CSV file <input type="file" csv-export="issues.exportCSV"
+                               accept=".csv" style="display: none;">
+      </label>
     </div>
   </div>
 
